--- a/my-projects.html
+++ b/my-projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -32,11 +33,11 @@
     <div class="projects-content">
         
         <section class="imgs-projects">
-            <a target="_blank" href="https://pedrotdr.github.io/testportfolio/"><img src="/img/qr-frontendmentor.png" alt="photo of the proyect"></a>
+            <a target="_blank" href="https://pedrotdr.github.io/testportfolio/"><img src="/img/qr-frontendmentor.png" alt="photo of the project"></a>
         </section>
 
         <section class="imgs-projects">
-           <a target="_blank" href="https://pedrotdr.github.io/freelancerpedro/"><img src="/img/Captura de pantalla 2022-11-11 220640.png" alt="photo of the proyect"></a>   
+           <a target="_blank" href="https://pedrotdr.github.io/freelancerpedro/"><img src="/img/Captura de pantalla 2022-11-11 220640.png" alt="photo of the project"></a>   
         </section>
         
     </div>
