--- a/my-skills.html
+++ b/my-skills.html
@@ -27,7 +27,7 @@
         
     <div class="skills-icons">
         <section class="skill">
-            <img src="/img/file_type_html_icon_130541.png" alt="html-symbol">
+            <img src="./img/file_type_html_icon_130541.png" alt="html-symbol">
         </section>
 
         <section class="skill">
