--- a/my-skills.html
+++ b/my-skills.html
@@ -31,15 +31,15 @@
         </section>
 
         <section class="skill">
-            <img src="/img/file_type_css_icon_130661.png" alt="css-symbol">
+            <img src="./img/file_type_css_icon_130661.png" alt="css-symbol">
         </section>
 
         <section class="skill">
-            <img src="/img/file_type_js_official_icon_130509.png" alt="javascrpt-symbol">
+            <img src="./img/file_type_js_official_icon_130509.png" alt="javascrpt-symbol">
         </section>
 
         <section class="skill">
-            <img src="/img/java_93883.png" alt="java-symbol">
+            <img src="./img/java_93883.png" alt="java-symbol">
         </section>
         
 
