--- a/my-projects.html
+++ b/my-projects.html
@@ -32,11 +32,11 @@
     <div class="projects-content">
         
         <section class="imgs-projects">
-            <a target="_blank" href="https://pedrotdr.github.io/testportfolio/"><img src="/img/qr-frontendmentor.png" alt="photo of the project"></a>
+            <a target="_blank" href="https://pedrotdr.github.io/testportfolio/"><img src="./img/qr-frontendmentor.png" alt="photo of the project"></a>
         </section>
 
         <section class="imgs-projects">
-           <a target="_blank" href="https://pedrotdr.github.io/freelancerpedro/"><img src="/img/Captura de pantalla 2022-11-11 220640.png" alt="photo of the project"></a>   
+           <a target="_blank" href="https://pedrotdr.github.io/freelancerpedro/"><img src="./img/Captura de pantalla 2022-11-11 220640.png" alt="photo of the project"></a>   
         </section>
         
     </div>
